--- a/src/GWTAI.Angular/public/i18n/en-US.json
+++ b/src/GWTAI.Angular/public/i18n/en-US.json
@@ -1,6 +1,7 @@
 {
   "menu": {
     "dashboard": "Dashboard",
+    "bookmarks": "Bookmarks",
     "design": "Design",
     "design.colors": "Color System",
     "design.icons": "Material Icons",
