--- a/extras/ai/AI-102.md
+++ b/extras/ai/AI-102.md
@@ -10,11 +10,35 @@ https://learn.microsoft.com/en-us/training/modules/prepare-azure-ai-development/
 
 ## Generative AI
 
-Generative AI uses language models to respond to natural language prompts, enabling you to build conversational apps and agents that support research, content creation, and task automation 
+- Generative AI uses language models to respond to natural language prompts, enabling you to build conversational apps and agents that support research, content creation, and task automation 
 
-The language models used in generative AI solutions can be large language models (LLMs) that have been trained on huge volumes of data and include many millions of parameters; or they can be small language models (SLMs) that are optimized for specific scenarios with lower overhead. 
+- The language models used in generative AI solutions can be large language models (LLMs) that have been trained on huge volumes of data and include many millions of parameters; or they can be small language models (SLMs) that are optimized for specific scenarios with lower overhead. 
 
-Language models commonly respond to text-based prompts with natural language text; though increasingly new multi-modal models are able to handle image or speech prompts and respond by generating text, code, speech, or images.
+- Language models commonly respond to text-based prompts with natural language text; though increasingly new multi-modal models are able to handle image or speech prompts and respond by generating text, code, speech, or images.
+
+- Generative AI applications are built on language models. The development process usually starts with an exploration and comparison of available foundation models to find the one that best suits the particular needs of your application. After selecting a suitable model, you deploy it to an endpoint where it can be consumed by a client application or AI agent.
+
+Foundation models, such as the GPT family of models, are state-of-the-art language models designed to understand, generate, and interact with natural language. Some common use cases for models are:
+
+-- Speech-to-text and text-to-speech conversion. For example, generate subtitles for videos.
+-- Machine translation. For example, translate text from English to Japanese.
+-- Text classification. For example, label an email as spam or not spam.
+-- Entity extraction. For example, extract keywords or names from a document.
+-- Text summarization. For example, generate a short one-paragraph summary from a multi-page document.
+-- Question answering. For example, provide answers to questions like "What is the capital of France?"
+-- Reasoning. For example, solve a mathematical problem.
+
+
+* IMPORTANT:
+The latest breakthrough in generative AI models is owed to the development of the Transformer architecture:
+
+- Instead of processing words sequentially, Transformers process 
+each word independently and in parallel by using attention.
+- Next to the semantic similarity between words, 
+Transformers use positional encoding to include the information about the position of a word in a sentence.
+
+
+
 
 # List Azure AI services
 
@@ -173,6 +197,229 @@ how it works, and what limitations may be expected.
 Designers and developers of AI-based solution should work within a framework 
 of governance and organizational principles that ensure the solution 
 meets responsible and legal standards that are clearly defined.
+
+
+# Selecting a foundation model for your generative AI app 
+
+## Can AI solve my use case?
+
+To start answering this question, you need to discover, filter, and deploy a model. 
+We can explore the available language models through three different catalogs:
+
+- Hugging Face: Vast catalog of open-source models across various domains.
+- GitHub: Access to diverse models via GitHub Marketplace and GitHub Copilot.
+- Azure AI Foundry: Comprehensive catalog with robust tools for deployment.
+
+### Choose between large and small language models
+
+- Large Language Models (LLMs) like GPT-4, Mistral Large, Llama3 70B, 
+Llama 405B, and Command R+ are powerful AI models 
+designed for tasks that require deep reasoning, 
+complex content generation, and extensive context understanding.
+
+- Small Language Models (SLMs) like Phi3, Mistral OSS models, and Llama3 8B 
+are efficient and cost-effective, while still handling many common 
+Natural Language Processing (NLP) tasks. They're perfect for running on 
+lower-end hardware or edge devices, where cost and speed are more important than model complexity.
+
+
+### Focus on a modality, task, or tool
+
+- *chat completion models*: Language models like GPT-4 and Mistral Large are 
+also known as designed to generate coherent and contextually appropriate text-based responses.
+
+- *reasoning models*: Tasks like math, coding, science, strategy, and logistics, 
+you can use like DeepSeek-R1 and o1.
+
+- *multi-modal*: meaning they can process images, audio, and other data 
+types alongside text. Models like GPT-4o and Phi3-vision are capable of analyzing and generating both text and images.
+
+- *generating images*: tools like DALL·E 3 and Stability AI can create realistic visuals from text prompts.
+
+- *embedding models*: like Ada and Cohere. Embeddings models convert 
+text into numerical representations and are used to improve search 
+relevance by understanding semantic meaning. 
+These models are often implemented in *Retrieval Augmented Generation (RAG)* 
+scenarios to enhance recommendation engines by linking similar content.
+
+* When you want to build an application that interacts with other software 
+tools dynamically, you can add function calling and JSON support. 
+
+
+### Specialize with regional and domain-specific models
+
+Certain models are designed for specific languages, regions, or industries. 
+These models can outperform general-purpose generative AI in their respective domains. 
+
+For example:
+
+- Core42 JAIS is an Arabic language LLM, making it the best 
+choice for applications targeting Arabic-speaking users.
+
+- Mistral Large has a strong focus on European languages, 
+ensuring better linguistic accuracy for multilingual applications.
+
+- Nixtla TimeGEN-1 specializes in time-series forecasting, making it ideal for financial predictions, supply chain optimization, and demand forecasting.
+
+* If your project has regional, linguistic, or industry-specific needs, these models can provide more relevant results than general-purpose AI.
+
+### Balance flexibility and performance with open versus proprietary models
+
+- *Proprietary models* are best for cutting-edge performance and enterprise use. 
+Azure offers models like OpenAI’s GPT-4, Mistral Large, and Cohere Command R+, 
+which deliver industry-leading AI capabilities. 
+These models are ideal for businesses needing enterprise-level security, support, and high accuracy.
+
+- *Open-source models* are best for flexibility and cost-efficiency. 
+Many open-source models available in the Azure AI Foundry model catalog 
+from Hugging Face, and models from Meta, Databricks, Snowflake, and Nvidia. 
+
+* All the models available in Azure AI Foundry meets the key enterprise requirements for usage:
+- Data and privacy: you get to decide what happens with your data.
+- Security and compliance: built-in security.
+- Responsible AI and content safety: evaluations and content safety.
+
+
+## How do I select the best model for my use case?
+
+- Task type: What type of task do you need the model to perform? 
+Does it include the understanding of only text, or also audio, or video, or multiple modalities?
+
+- Precision: Is the base model good enough or do you need a fine-tuned model 
+that is trained on a specific skill or dataset?
+
+- Openness: Do you want to be able to fine-tune the model yourself?
+
+- Deployment: Do you want to deploy the model locally, 
+on a serverless endpoint, or do you want to manage the deployment infrastructure?
+
+### Filter models for precision
+
+- When integrating a language model into an app, you can choose between a 
+base model or a fine-tuned model. 
+A base model, like GPT-4, is pretrained on a large dataset and can 
+handle various tasks but can lack precision for specific domains. 
+Techniques like prompt engineering can improve this, but sometimes fine-tuning is necessary.
+
+- A *f*ine-tuned model* is trained further on a smaller, task-specific dataset to improve its precision and ability to generate relevant outputs for specific applications. You can either use a *fine-tuned model* or *fine-tune* a model yourself.
+
+### Filter models for performance
+
+* Table When you're exploring models through the Azure AI Foundry model catalog, 
+you can use model benchmarks to compare publicly available metrics:
+
+https://learn.microsoft.com/en-us/training/modules/explore-models-azure-ai-studio/2-select-model
+
+- To evaluate how a selected model performs regarding your specific requirements, 
+you can consider manual or automated evaluations.
+
+- *Manual evaluations* allow you to rate your model's responses. 
+- *Automated evaluations* include traditional machine learning metrics and AI-assisted metrics that are calculated and generated for you.
+
+
+## Can I scale for real-world workloads?
+
+Considerations for scaling a generative AI solution include:
+
+- Model deployment: Where will you deploy the model for the best balance of performance and cost?
+- Model monitoring and optimization: How will you monitor, evaluate, and optimize model performance?
+- Prompt management: How will you orchestrate and optimize prompts to maximize the accuracy and relevance of generated responses?
+- Model lifecycle: How will you manage model, data, and code updates as part of an ongoing Generative AI Operations (GenAIOps) lifecycle?
+
+
+## Deploy a model to an endpoint
+
+When you develop a generative AI app, you need to integrate language models into your application. 
+To be able to use a language model, you need to deploy the model.
+
+1- API request is sent to the endpoint.
+2- The endpoint specifies the model that processes the request.
+3- The result is sent back to the app through an API response.
+
+
+When you deploy a language model with Azure AI Foundry, 
+you have several types available, which depend on the model you want to deploy.
+
+- Standard deployment: Models are hosted in the Azure AI Foundry project resource.
+
+- Serverless compute: Models are hosted in Microsoft-managed dedicated serverless endpoints in an Azure AI Foundry hub project.
+
+- Managed compute: Models are hosted in managed virtual machine images in an Azure AI Foundry hub project.
+
+
+* The associated cost depends on the type of model you deploy, 
+which deployment option you choose, and what you are doing with the model:
+* Standard deployment is recommended for most scenarios.
+
+![alt text](./images-cert/image2.png)
+
+
+# Apply prompt patterns to optimize your model's output
+
+- The process of designing and optimizing prompts to improve the model's performance 
+is also known as *prompt engineering*
+
+- An effective approach is to add instructions to your deployed model 
+in the form of a system prompt. The system prompt sets the model's behavior 
+and allows you to guide the model without exposing the end user to the 
+instructions. 
+The best results are often achieved through the assignment of an *explicit system prompt* and *guidance (or templates)*
+
+## Specify the desired format for responses
+
+- When you want the model to generate output in a specific format, 
+you can provide a template or structure in your prompt.
+Example, if you're a sports reporting composing a historical article, 
+you can request that the model follow a specific template,
+which includes headings, bullet points, and data breakdowns.
+
+## Add context
+
+- When you want the model to focus on specific topics, 
+you can specify the context to consider.
+
+No context specified:
+When should I visit Edinburgh?
+
+With context specified:
+When should I visit Edinburgh?
+I'm particularly interested in attending Scotland's home matches 
+in the Six Nations rugby tournament.
+
+
+## Apply model optimization strategies
+
+- *Retrieval Augmented Generation (RAG)*: A technique that involves 
+using a data source to provide grounding context to prompts. 
+RAG can be a useful approach when you need the model to answer questions 
+based on a specific knowledge domain or when you need the model to consider 
+information related to events that occurred after the training data on which the model is based.
+
+- *Fine-tuning*: A technique that involves extending the training of a 
+foundation model by providing example prompts and responses that reflect 
+the desired output format and style.
+
+## The strategy you should choose as a developer depends requirements
+
+1- Prompt engineering
+2- Combined strategies
+3- Retrieval Augmented Generation (RAG)
+4- Fine-tuning
+
+- Optimize for context: When the model lacks contextual knowledge 
+and you want to maximize responses accuracy: we can us RAG for example
+
+- Optimize the model: When you want to improve the response format, style, 
+or speech by maximizing consistency of behavior: With fine-tuning, we train a 
+base language model on a dataset of example prompts and responses before 
+integrating it in your application, with the result that the fine-tuned model 
+will produce responses that are consistent with the examples 
+in the fine-tuning training dataset.
+
+* We can use any combination of optimization strategies, 
+for example prompt engineering, RAG and a fine-tuned model, 
+to improve your language application.
+
 
 
 
