Develop prompt flow

--- a/extras/ai/AI-102.md
+++ b/extras/ai/AI-102.md
@@ -590,8 +590,191 @@ Whenever our LLM application doesn't perform as expected,
 we need to revert back to experimentation to iteratively explore how to improve the flow
 
 
+### Develop prompt flow
+
+- The prompt flow tools in Azure AI Foundry create file-based assets that 
+define the prompt flow in a folder in *blob storage*
+
+* Note of why the headache of using promp flow and its configuration process in azure foundry
+instead of directly use open ai model from azure foundry prpject:
+
+It can seem confusing at first, but Prompt Flow offers significant advantages over directly connecting to a model, especially for building a chat application.
+
+Here's a breakdown of the "why" behind using Prompt Flow in Azure AI Studio:
+
+Azure AI Foundry Project vs. Prompt Flow: It's Not "Either/Or"
+First, it's important to understand that an Azure AI Foundry project and Prompt Flow are not mutually exclusive. Think of your Azure AI Foundry project as your central workbench or studio. It's where you organize all the resources for your AI application: your models, data, compute resources, and deployments.
+
+Prompt Flow, on the other hand, is a specialized tool within your AI Foundry project. It's a visual development tool that helps you design, build, and test the logic of your AI application, especially how it interacts with Large Language Models (LLMs) like those from OpenAI.
+
+So, you are still using an OpenAI model within your Azure AI Foundry project, but you are using Prompt Flow to manage how you interact with that model.
+
+Why the "Headache"? The Advantages of Prompt Flow
+While a direct connection to an OpenAI model is quick for a simple proof-of-concept, it becomes difficult to manage as your application grows. The "long and confuse flow" you're seeing in the Microsoft Learn exercise is actually a structured way of building a more robust and sophisticated application. Here are the key advantages:
+
+Visual and Organized Development 🧠: Prompt Flow gives you a visual graph of your application's logic. Each step, from processing the user's input to calling the LLM and formatting the output, is a distinct "node" in the flow. This visual representation makes it much easier to understand, debug, and modify your application's logic, especially as it becomes more complex. For a chat app, this could involve nodes for retrieving chat history, generating a contextually relevant prompt, calling the model, and then processing the model's response.
+
+Streamlined Prompt Engineering and Tuning 🧪: A good AI application relies on well-crafted prompts. Prompt Flow is designed for this. You can easily:
+
+Create and test prompt variants: Try out different versions of your prompts to see which one gives the best results.
+
+Use templates: Create dynamic prompts that can incorporate variables and other inputs.
+
+Evaluate performance: Use built-in tools to assess the quality and effectiveness of your prompts and the overall flow.
+
+Built for Chatbots and Conversational AI 💬: The "Chat Flow" in the exercise is specifically designed for building conversational applications. It has built-in features to:
+
+Manage chat history: It automatically handles the conversation history, which is crucial for a chatbot to have a coherent, multi-turn conversation.
+
+Handle chat inputs and outputs: It provides a structured way to manage the back-and-forth of a conversation.
+
+Scalability and Collaboration 🤝: For a real-world application, you'll likely be working with a team. Prompt Flow makes it easier to collaborate on and version control your application's logic. It also simplifies the process of deploying your flow as a scalable endpoint that your application can call.
+
+Conditional Logic and Integration of Tools 🛠️: Prompt Flow allows you to add conditional logic (e.g., "if the user asks about X, then do Y"). You can also integrate other tools into your flow, such as Python scripts for custom data processing or APIs for external services.
+
+In a Nutshell: From a Simple Call to a Sophisticated Application
+Connecting directly to an OpenAI model is like making a single phone call. It's quick and easy for a one-off task.
+
+Using Prompt Flow is like building a call center. It takes more effort to set up, but you get a system that can handle many calls, route them to the right place, keep track of conversations, and be easily managed and improved over time.
+
+For the Microsoft Learn exercise, they are teaching you the more structured and scalable way to build a chat app. While it may seem like overkill for a simple example, these are the foundational skills you'll need to build more complex and production-ready AI applications. The initial "headache" of setting up the flow pays off significantly in terms of maintainability, scalability, and the ability to fine-tune your application's performance.
+
+Also:
+
+Azure AI Project (The Workspace)
+The AI Project is where the hands-on development work happens. It's a self-contained environment that inherits the settings and connections from its parent Hub.
+
+Key Functions:
+
+Work Isolation: It provides an organized space for a specific use case. All your assets for the chat app—your prompt flows, notebooks, data, and deployed endpoints—are neatly contained within its project.
+
+Team-Specific Environment: It allows teams to work independently without interfering with each other, while still leveraging the shared resources provided by the Hub.
+
+Lifecycle Management: You manage the end-to-end lifecycle of a specific AI model or application (development, evaluation, deployment) within its project.
+
+Why the Exercise Uses a Hub
+The Microsoft Learn exercise guides you through this structure to teach best practices.
+
+It starts with the Hub because in any real-world scenario, you first need that central foundation.
+
+When you create your Prompt Flow, you are doing so within a Project.
+
+That Project leverages the connection to the OpenAI model that was likely configured at the Hub level.
+
+So, you aren't choosing between a Hub and a Project. The workflow is:
+
+Create/Select an AI Hub ➡️ Create an AI Project within that Hub ➡️ Do your development work (like building a Prompt Flow) inside the Project.
+
+This layered approach ensures that as you move from simple exercises to building complex, production-grade AI solutions, your work is secure, organized, and scalable.
+
+
 # Develop a RAG-based solution with your own data using Azure AI Foundry
 
 ## Ungrounded prompts and responses
+
+
+- When you use a language model to generate a response to a prompt, the only information 
+that the model has to base the answer on comes from the data on which it was trained 
+which is often just a large volume of uncontextualized text from the Internet or some other source.
+
+- The result will likely be a grammatically coherent and logical response to the prompt, 
+but because it isn't grounded in relevant, factual data, it's uncontextualized; and may 
+in fact be inaccurate and include "invented" information. For example, 
+the question "Which product should I use to do X?" might include details of a fictional product.
+
+So:
+
+- In contrast, you can use a data source to ground the prompt with some relevant, 
+factual context. The prompt can then be submitted to a language model, 
+including the grounding data, to generate a contextualized, relevant, and accurate response.
+
+- The data source can be any repository of relevant data. 
+For example, you could use data from a product catalog database to ground 
+the prompt "Which product should I use to do X?" so that the response includes
+relevant details of products that exist in the catalog.
+
+
+## Understand how to ground your language model
+
+- Though language models are trained on a vast amount of data, they may not have access to the knowledge you want to make available to your users. To ensure that an agent is grounded on specific data to provide accurate and domain-specific responses, you can use Retrieval Augmented Generation (RAG).
+
+- It's a process for retrieving information that is relevant to the user's initial prompt. In general terms, the RAG pattern incorporates the following steps:
+
+1- Retrieve grounding data based on the initial user-entered prompt.
+2- Augment the prompt with grounding data.
+3- Use a language model to generate a grounded response.
+
+- We can use Azure AI Foundry to build a custom agent that uses your own 
+data to ground prompts. 
+Azure AI Foundry supports a range of data connections that you can use to add data to a project, 
+including:
+
+1- Azure Blob Storage
+2- Azure Data Lake Storage Gen2
+3- Microsoft OneLake
+4- We can also upload files or folders to the storage used by your AI Foundry project.
+
+![alt text](./images-cert/image4.png)
+
+
+## Make data searchable / Azure AI Search
+
+- When we build an agent with the Azure AI Foundry, we can use the integration 
+with *Azure AI Search* to retrieve the relevant context in your chat flow.
+
+- Azure AI Search is a retriever that you can include when building a language model application 
+with prompt flow. Azure AI Search allows you to bring your own data, index your data, 
+and query the index to retrieve any information you need.
+
+### Using a vector index 
+
+- While a text-based index will improve search efficiency, you can usually achieve a better data retrieval solution by using a vector-based index that contains embeddings that represent the text tokens in your data source.
+
+- An embedding is a special format of data representation that a search engine can use to easily find the relevant information. More specifically, an embedding is a vector of floating-point numbers.
+
+- For example, imagine you have two documents with the following contents:
+
+-- "The children played joyfully in the park."
+-- "Kids happily ran around the playground."
+
+These two documents contain texts that are semantically related, even though different words are used. By creating vector embeddings for the text in the documents, the relation between the words in the text can be mathematically calculated.
+
+Refer to https://learn.microsoft.com/en-us/training/modules/build-copilot-ai-studio/3-search-data
+
+### Creating a search index
+
+- In Azure AI Search, a search index describes how your content is organized to make it searchable.
+
+- You can add your data to Azure AI Foundry, after which you can use Azure AI Search to create an index in the Azure AI Foundry portal using an embedding model. The index asset is stored in Azure AI Search and queried by Azure AI Foundry when used in a chat flow.
+
+![alt text](./images-cert/image5.png)
+
+# Searching an index
+
+There are several ways that information can be queried in an index:
+
+- Keyword search: Identifies relevant documents or passages based on specific keywords or terms provided as input.
+- Semantic search: Retrieves documents or passages by understanding the meaning of the query and matching it with semantically related content rather than relying solely on exact keyword matches.
+- Vector search: Currently, the most advanced technique is *vector search*, which creates embeddings to represent your data.
+Uses mathematical representations of text (vectors) 
+to find similar documents or passages based on their semantic meaning or context.
+- Hybrid search: Combines any or all of the other search techniques. 
+Queries are executed in parallel and are returned in a unified result set.
+Hybrid search is a combination of keyword (and full text), and vector search, 
+to which semantic ranking is optionally added. When you create an index that is 
+compatible with hybrid search, the retrieved information is precise when exact matches 
+are available (using keywords), and still relevant when only conceptually similar information can be found (using vector search).
+
+
+## Create a RAG-based client application
+
+- When you've created an Azure AI Search index for your contextual data, 
+you can use it with an OpenAI model. To ground prompts with data from your index, 
+the Azure OpenAI SDK supports extending the request with connection details for the index.
+
+* Note: refer to RAG Ai-102 endpoint in GWTAI app
+
+* Implement RAG in a prompt flow, refer docs: 
+https://learn.microsoft.com/en-us/training/modules/build-copilot-ai-studio/4-build-copilot
 
 
