added rag generative endpoint

--- a/extras/ai/AI-102.md
+++ b/extras/ai/AI-102.md
@@ -772,9 +772,64 @@ are available (using keywords), and still relevant when only conceptually simila
 you can use it with an OpenAI model. To ground prompts with data from your index, 
 the Azure OpenAI SDK supports extending the request with connection details for the index.
 
-* Note: refer to RAG Ai-102 endpoint in GWTAI app
-
 * Implement RAG in a prompt flow, refer docs: 
 https://learn.microsoft.com/en-us/training/modules/build-copilot-ai-studio/4-build-copilot
 
+* Note: refer to RAG Ai-102 endpoint in GWTAI app
+
+## Implement RAG in a prompt flow
+
+- After uploading data to Azure AI Foundry and creating an index on your data using the integration with Azure AI Search, you can implement the RAG pattern with Prompt Flow to build a generative AI application.
+
+* Prompt Flow is a development framework for defining flows that orchestrate interactions with an LLM.
+
+- A flow begins with one or more inputs, usually a question or prompt entered by a user, 
+and in the case of iterative conversations the chat history to this point.
+
+The flow is then defined as a series of connected tools, each of which performs 
+a specific operation on the inputs and other environmental variables. 
+There are multiple types of tool that you can include in a prompt flow to perform tasks such as:
+
+1- Running custom Python code
+2- Looking up data values in an index
+3- Creating prompt variants - enabling you to define multiple versions of a prompt for a large language model (LLM), varying system messages or prompt wording, and compare and evaluate the results from each variant.
+4- Submitting a prompt to an LLM to generate results.
+
+Finally, the flow has one or more outputs, typically to return the generated results from an LLM.
+
+### Using the RAG pattern in a prompt flow
+
+- The key to using the RAG pattern in a prompt flow is to use an Index Lookup 
+tool to retrieve data from an index so that subsequent tools in the flow can 
+use the results to augment the prompt used to generate output from an LLM.
+
+### Use a sample to create a chat flow
+
+![alt text](./images-cert/image6.png)
+
+1- Modify query with history:
+The first step in the flow is a Large Language Model (LLM) node that takes the chat history and the user's last question 
+and generates a new question that includes all necessary information.
+
+2- Look up relevant information:
+Next, you use the Index Lookup tool to query the search index you created with the integrated 
+Azure AI Search feature and find the relevant information from your data source.
+
+3- Generate prompt context:
+The output of the Index Lookup tool is the retrieved context you want to use 
+when generating a response to the user. You want to use the output in a prompt 
+that is sent to a language model, which means you want to parse the output into a more suitable format.
+
+4- Define prompt variants:
+When you construct the prompt you want to send to your language model, 
+you can use variants to represent different prompt contents.
+When including RAG in your chat flow, your goal is to ground the chatbot's responses. 
+Next to retrieving relevant context from your data source, you can also influence the groundedness of the chatbot's response by instructing it to use the context and aim to be factual.
+
+5- Chat with context:
+Finally, you use an LLM node to send the prompt to a language model to generate a 
+response using the relevant context retrieved from your data source. 
+The response from this node is also the output of the entire flow.
+
+* Note: After configuring the sample chat flow to use your indexed data and the language model of your choosing, you can deploy the flow and integrate it with an application to offer users an agentic experience.
 
