added Fine-Tuning for Chat Applications docs

--- a/extras/ai/AI-102.md
+++ b/extras/ai/AI-102.md
@@ -833,3 +833,205 @@ The response from this node is also the output of the entire flow.
 
 * Note: After configuring the sample chat flow to use your indexed data and the language model of your choosing, you can deploy the flow and integrate it with an application to offer users an agentic experience.
 
+
+
+# Fine-tune a language model with Azure AI Foundry 
+
+- There are various strategies to optimize the model's behavior and the performance of your chat application. One strategy is to fine-tune a language model, which you can then integrate with your chat application. The benefit of fine-tuning *over training your own language model*, is that you need less time, compute resources, and data to customize the model to your needs.
+
+## Understand when to fine-tune a language model
+
+### 💬 Building a Chat App with Azure AI Foundry
+- Use **Prompt Flow** to integrate a language model into your application.
+- Improve response quality using:
+  - **Prompt Engineering**
+  - **Retrieval-Augmented Generation (RAG)**
+  - **Fine-Tuning**
+
+### 🧠 Prompt Engineering
+- A fast and simple way to guide model behavior.
+- Useful for controlling:
+  - **Style**
+  - **Tone**
+  - **Format**
+- Techniques include:
+  - Modifying **system messages**
+  - Using **one-shot** or **few-shot** examples
+- **Limitation**: May not always produce consistent results.
+
+### 📚 Retrieval-Augmented Generation (RAG)
+- Retrieves relevant context from a data source before generating a response.
+- Ideal for **factual**, **data-grounded** tasks.
+- Example: Answering questions about a travel booking catalog.
+
+### 🛠️ Fine-Tuning
+- Trains a base model on your own dataset.
+- Best for:
+  - Controlling **behavior**
+  - Ensuring **consistency**
+  - Enforcing specific **styles** or **formats**
+- Can be combined with RAG for enhanced performance.
+
+### ✅ When to Use What
+
+Prompt Engineering: Quick tweaks to behavior, tone, and format
+RAG: Factual accuracy using external data sources
+Fine-Tuning: Consistent behavior and custom response styles
+
+
+## Prepare your data to fine-tune a chat completion model
+
+Fine-tuning involves combining a suitable foundation model to use as a base, 
+and with a set of training data that includes example prompts and responses that the model can learn from.
+
+![alt text](./images-cert/image7.png)
+
+### 📁 Dataset Importance
+- The **quality** of your dataset significantly affects the performance of your fine-tuned model.
+- You need **less data** than training from scratch, but still enough to ensure **consistent behavior**.
+- The **amount of data** required depends on your **specific use case**.
+
+### 💬 Fine-Tuning for Chat Completion
+- Dataset should consist of **sample conversations** with three components:
+  - `system` message
+  - `user` message
+  - `assistant` response
+- Format: **JSON Lines (JSONL)** file.
+- Each line represents a full interaction or multi-turn conversation.
+
+### 🧹 Dataset Preparation Tips
+- **Remove** any personal or sensitive information.
+- Ensure the dataset is:
+  - **High quality**
+  - **Diverse** in examples and scenarios
+- You can include **multiple turns** in a single line.
+- Use the optional `"weight"` key to control training focus:
+  - `"weight": 1` → include in training
+  - `"weight": 0` → ignore during training
+
+### 🧾 Example: 
+
+- Single-Turn Entry
+```json
+{
+"messages": 
+[
+  { "role": "system", 
+     "content": "You are an Xbox customer support agent whose primary goal is to help users with issues they are experiencing with their Xbox devices. You are friendly and concise. You only provide factual answers to queries, and do not provide answers that are not 
+     related to Xbox."    
+  }, 
+  {
+    "role": "user", 
+    "content": "Is Xbox better than PlayStation?"
+  }, 
+  {
+    "role": "assistant", 
+    "content": "I apologize, but I cannot provide personal opinions. My primary job is to assist you with any 
+    issues related to your Xbox device. Do you have any Xbox-related issues that need addressing?"
+  }
+]
+}
+```
+
+- Multi-Turn Entry with Weights
+```json
+{
+  "messages": 
+[
+  {
+    "role": "system", 
+    "content": "Marv is a factual chatbot that is also sarcastic."
+    }, 
+    {
+      "role": "user", 
+      "content": "What's the capital of France?"
+      }, 
+      {
+        "role": "assistant", 
+        "content": "Paris", 
+        "weight": 0
+      }, 
+    {
+      "role": "user", 
+      "content": "Can you be more sarcastic?"
+    }, 
+    {
+      "role": "assistant", 
+      "content": "Paris, as if everyone doesn't know that already.", 
+      "weight": 1
+    }
+]
+}
+```
+
+### Key Takeaways
+- Know your desired model behavior.
+- Create a clean, diverse, and well-structured dataset in .jsonl format.
+- Proper preparation increases the chance of successful fine-tuning and better model performance.
+
+
+## Explore fine-tuning language models in Azure AI Foundry portal
+
+
+### 🧱 Using a Foundation Model
+- Fine-tuning starts with a **pretrained base model** from the **Azure AI Foundry model catalog**.
+- Tasks you can fine-tune for include:
+  - **Text classification**
+  - **Translation**
+  - **Chat completion**
+
+### 💬 Fine-Tuning for Chat Applications
+- Choose a base model that supports **chat completion** tasks.
+- Use the **task filter** in the model catalog to find suitable models that supports fine-tuning for chat.
+- Not all models may be available due to **quota** or **region limitations**.
+
+
+### 🔍 Choosing the Right Foundation Model
+
+When selecting a model, consider the following:
+
+- **Model capabilities**: Choose a model that aligns with your task. For example, BERT is good for understanding short texts.
+- **Pretraining data**: Understand the data used to train the model. For instance, GPT-2 was trained on unfiltered internet data, which may introduce biases.
+- **Limitations and biases**: Be aware of any known issues or biases in the model.
+- **Language support**: Ensure the model supports the languages you need, especially for multilingual applications.
+
+> 💡 Tip: Use the **model card** linked in the model catalog for detailed information about each model. 
+These are often hosted on Hugging Face.
+
+
+### ⚙️ Configuring a Fine-Tuning Job
+
+- Steps in the Azure AI Foundry Portal:
+1. **Select a base model** from the catalog.
+2. **Upload your training dataset** (in JSONL format).
+3. *(Optional)* Upload a **validation dataset**.
+4. **Configure advanced options**.
+
+- When you submit a model for fine-tuning, the model is further trained on your data. 
+To configure the fine-tuning or training job, you can specify the following advanced options:
+
+Advanced Options You Can Configure:
+
+- **Learning rate**: Controls how much the model adjusts during training.  A smaller learning rate can be useful to avoid overfitting.
+- **Epochs**: Number of times the model sees the entire dataset.
+- **Batch size**: Number of samples processed before the model updates.
+In general, larger batch sizes tend to work better for larger datasets. 
+The default value and the maximum value for this property are specific to a base model. 
+A larger batch size means that model parameters are updated less frequently, but with lower variance.
+- **seed**: The seed controls the reproducibility of the job. Passing in the same seed and 
+job parameters should produce the same results, but can differ in rare cases. 
+If a seed isn't specified, one is generated for you.
+
+
+### 📊 Monitoring and Deployment
+
+- After submission, a **training job** is created.
+- You can:
+  - **Monitor job status**
+  - **Review input parameters**
+  - **Evaluate performance** (if validation data is provided)
+- Once satisfied:
+  - **Deploy the fine-tuned model**
+  - **Test it**
+  - **Integrate it into your chat application**
+
