Added ai ethics docs

--- a/extras/ai/AI-102.md
+++ b/extras/ai/AI-102.md
@@ -775,7 +775,6 @@ the Azure OpenAI SDK supports extending the request with connection details for 
 * Implement RAG in a prompt flow, refer docs: 
 https://learn.microsoft.com/en-us/training/modules/build-copilot-ai-studio/4-build-copilot
 
-* Note: refer to RAG Ai-102 endpoint in GWTAI app
 
 ## Implement RAG in a prompt flow
 
@@ -833,6 +832,13 @@ The response from this node is also the output of the entire flow.
 
 * Note: After configuring the sample chat flow to use your indexed data and the language model of your choosing, you can deploy the flow and integrate it with an application to offer users an agentic experience.
 
+
+## Exercise - Create a generative AI app that uses your own data
+
+* Note: refer to RAG Ai-102 endpoint in GWTAI app
+
+https://go.microsoft.com/fwlink/?linkid=2261362
+https://learn.microsoft.com/en-us/training/modules/build-copilot-ai-studio/5-exercise
 
 
 # Fine-tune a language model with Azure AI Foundry 
@@ -1035,3 +1041,232 @@ If a seed isn't specified, one is generated for you.
   - **Test it**
   - **Integrate it into your chat application**
 
+
+## Exercise - Fine-tune a language model
+
+https://learn.microsoft.com/en-us/training/modules/finetune-model-copilot-ai-studio/5-exercise
+
+
+# Implement a responsible generative AI solution in Azure AI Foundry
+
+
+## **Plan a responsible generative AI solution** 🧠
+
+- The 4-Stage Process (Map-Measure-Mitigate-Manage)
+
+| Stage | Goal (NIST RMF Function) | Key Action |
+| :--- | :--- | :--- |
+| **1. Map** | **Identify Potential Harms** | Conduct an impact assessment to list and **prioritize** risks (e.g., bias, misinformation, toxicity) specific to your solution. |
+| **2. Measure** | **Quantify Harms** | Establish metrics, create test sets, and perform **systematic testing** (Red Teaming, automated) to track the frequency and severity of harms. |
+| **3. Mitigate** | **Reduce Risks** | Apply a **layered defense** (Model, Safety System, Prompt Engineering, UX) to minimize the presence and impact of harms. Ensure transparent communication. |
+| **4. Manage** | **Operational Readiness** | Define a continuous monitoring and governance plan, including **phased delivery**, **incident response**, **rollback capability**, and user feedback mechanisms. |
+
+
+## **Map potential harms** 🗺️
+
+- This stage focuses on proactively identifying and analyzing risks specific to a generative AI solution.
+
+| Step | Key Objective | Actionable Notes |
+| :--- | :--- | :--- |
+| **1. Identify potential harms** | Determine the full scope of risks based on the model and its data/fine-tuning. | **Common Harms:** Offensive/discriminatory content, factual inaccuracies (hallucinations), and content that supports illegal/unethical behavior. |
+| | | **Guidance:** Consult the **Transparency Note** for your services (e.g., Azure OpenAI) and the **Responsible AI Impact Assessment Guide/Template**. |
+| **2. Prioritize the harms** | Focus resources on the most critical risks. | Assess each harm's **likelihood** of occurrence and the resulting **level of impact**. |
+| | | **Example:** A high-impact, low-likelihood harm (e.g., lethal poison recipe) may be prioritized over a lower-impact, high-likelihood harm (e.g., inaccurate cooking time), but the final decision is a matter of discussion and policy. |
+| **3. Test and verify the presence of harms** | Confirm if and how the prioritized harms occur in the solution. | Use **"Red Team" testing**: Adversarial testing where experts deliberately probe the solution for weaknesses to produce harmful outputs. |
+| | | This step helps verify the **realistic likelihood** of harmful output and may reveal new, unidentified harms. |
+| **4. Document and share details of harms** | Maintain a record of verified risks for continuous management. | Document the evidence and details of all verified harms. **Share** the prioritized list with relevant stakeholders (development, policy, legal). |
+
+
+## Measuring Potential Harms 
+
+- This process establishes a **baseline** to quantify potential harms and track mitigation efforts.
+
+### Generalized Measurement Approach
+
+1.  **Prepare Diverse Input Prompts:**
+    * Create a selection of inputs likely to elicit each documented potential harm (e.g., prompts for manufacturing dangerous substances).
+2.  **Submit Prompts and Retrieve Output:**
+    * Run the prepared prompts through the AI system and collect the generated responses.
+3.  **Evaluate and Categorize Harm:**
+    * Apply **pre-defined, strict criteria** to evaluate the output.
+    * Categorize the output based on the level of potential harm (e.g., "harmful" or "not harmful," or a range of levels).
+4.  **Document and Share:**
+    * Record the results and share them with stakeholders.
+
+### Manual and automatic testing
+
+* **Start with Manual Testing:** Begin with a small set of inputs to ensure consistency in test results and validate evaluation criteria.
+* **Automate Testing:** Devise a method for automated testing with a larger volume of test cases. This may involve using a **classification model** to automatically evaluate output.
+* **Periodic Manual Validation:** Even with automation, regularly perform manual testing to validate new scenarios and ensure the automated solution is working correctly.
+
+
+## Mitigate potential harms
+
+- After measuring the baseline harm, mitigation involves a **layered approach** where techniques are applied across four levels, followed by retesting against the baseline.
+
+### The Four Mitigation Layers
+
+1.  **The Model Layer**
+    * **Select an appropriate model** for the intended use (e.g., use a simpler model for classification tasks to lower the risk of generating harmful content).
+    * **Fine-tune** the foundational model with custom training data to scope responses and increase relevance.
+
+2.  **The Safety System Layer**
+    * Implement **platform-level configurations** and capabilities.
+    * Utilize **content filters** to suppress prompts and responses based on severity levels (safe, low, medium, high) across categories (hate, sexual, violence, self-harm).
+    * Include **abuse detection algorithms** (e.g., for high-volume automated requests) and **alert notifications** for fast response to abuse or harmful behavior.
+
+3.  **The System Message and Grounding Layer**
+    * Focus on **prompt construction** submitted to the model.
+    * Specify **system inputs** to define the model's behavioral parameters.
+    * Apply **prompt engineering** to add **grounding data** to inputs, maximizing relevant and nonharmful output.
+    * Use a **Retrieval Augmented Generation (RAG)** approach to include contextual data from trusted sources in the prompts.
+
+4.  **The User Experience Layer**
+    * Involves the **user interface and documentation**.
+    * Design the application to **constrain inputs** to specific subjects or types.
+    * Apply **input and output validation**.
+    * Ensure **transparency** in documentation about the system's capabilities, limitations, and any potential harms not fully addressed by mitigation measures.
+
+
+## Manage a responsible generative AI solution
+
+- After map potential harms, develop a measure of their presence, and implement mitigations for them in your solution, there are considerations that help ensure a successful release and subsequent operations.
+
+### 1. Complete Prerelease Reviews
+
+Before deployment, ensure compliance by having the following teams review the system and its documentation:
+
+* **Legal:** For regulatory adherence.
+* **Privacy:** To ensure compliance with privacy laws and organizational policies.
+* **Security:** To assess and mitigate security risks.
+* **Accessibility:** To ensure the solution is usable by all individuals.
+
+### 2. Release and Operate the Solution
+
+Successful operation requires proactive planning:
+
+* **Phased Delivery Plan:** Release the solution to a **restricted user group initially** to gather feedback and identify problems before a wider release.
+* **Incident Response Plan:** Create a plan that includes **time estimates** for responding to unanticipated incidents.
+* **Rollback Plan:** Define steps to **revert the solution to a previous state** if an incident occurs.
+* **Immediate Blocking:** Implement the ability to **immediately block harmful system responses** upon discovery.
+* **Misuse Blocking:** Implement a capability to **block specific users, applications, or client IP addresses** in case of system misuse.
+* **User Feedback:** Implement a way for users to report problematic generated content (e.g., "inaccurate," "harmful," "offensive").
+* **Telemetry Tracking:** Track data to determine **user satisfaction** and identify functional or usability gaps, ensuring compliance with privacy laws.
+
+### 3. Utilize Azure AI Foundry Content Safety
+
+Azure AI Foundry Content Safety provides specialized features to keep AI solutions and copilots safe from risk:
+
+| Feature | Functionality |
+| :--- | :--- |
+| **Prompt shields** | Scans for the risk of **user input attacks** on language models. |
+| **Groundedness detection** | Detects if text responses are **grounded in a user's source content**. |
+| **Protected material detection** | **Scans for known copyrighted content**. |
+| **Custom categories** | Define **custom categories** for any new or emerging patterns of harm. |
+
+
+## Exercise - Apply content filters to prevent the output of harmful content
+
+- One of the most effective ways to mitigate harmful responses from generative AI models in Azure AI Foundry is to use content filters. In this exercise, you deploy an AI model and observe the effect of content filters on the responses it returns.
+
+https://learn.microsoft.com/en-us/training/modules/responsible-ai-studio/7-exercise-content-filters
+
+
+# Evaluate generative AI performance in Azure AI Foundry portal
+
+Evaluating generative AI apps is critical for:
+
+* **Quality Assurance:** Ensures accurate and relevant responses by identifying and addressing issues.
+* **Improved User Satisfaction:** High-quality responses lead to a better user experience and continued application use.
+* **Continuous Improvement:** Analyzing evaluation results helps identify areas for enhancement and iteratively improves app performance, keeping up with user needs and expectations.
+
+
+## Assess the model performance
+
+### **Evaluation Scope**
+
+* **Individual Language Model:** Assesses a model's response to a given input by analyzing the input, output, and optionally comparing it to a predefined expected output.
+* **Chat Flow:** Evaluates a complete flow that orchestrates multiple models and code to process an input and generate an output. Evaluation can cover the entire flow or its individual components.
+
+### **Evaluation Approaches**
+
+1.  **Model Benchmarks** (Publicly available metrics across models/datasets):
+    * **Accuracy:** Matches generated text exactly with the correct answer (1 for match, 0 otherwise).
+    * **Coherence:** Measures smooth, natural, and human-like flow of the output.
+    * **Fluency:** Assesses adherence to grammatical rules, syntactic structures, and vocabulary usage.
+    * **GPT Similarity:** Quantifies the semantic similarity between the model's prediction and the ground truth.
+
+* Note *Can be explored in the Azure AI Foundry portal before deployment.*
+
+2.  **Manual Evaluations** (Human Raters):
+    * Provides insight into aspects missed by automated metrics (e.g., context relevance, user satisfaction).
+    * Human evaluators rate responses based on criteria like relevance, informativeness, and engagement.
+
+3.  **AI-Assisted Metrics** (Advanced Techniques):
+    * **Generation Quality Metrics:** Evaluates overall quality (creativity, coherence, adherence to style/tone).
+    * **Risk and Safety Metrics:** Assesses potential risks and ensures the model does not generate harmful or biased content.
+
+4.  **Natural Language Processing (NLP) Metrics** (Quantify overlap with ground truth):
+    * **F1-Score:** Measures the ratio of shared words between generated and ground truth answers (useful for tasks like text classification).
+    * **BLEU:** Bilingual Evaluation Understudy.
+    * **METEOR:** Metric for Evaluation of Translation with Explicit Ordering.
+    * **ROUGE:** Recall-Oriented Understudy for Gisting Evaluation.
+
+## Manually evaluate the performance of a model
+
+### **Steps for Manual Evaluation**
+
+1.  **Prepare Test Prompts:**
+    * Create a diverse set of prompts covering common questions, edge cases, and potential failure points.
+    * This comprehensively assesses the app's performance and identifies areas for improvement.
+
+2.  **Test Selected Model in the Chat Playground (Early Development):**
+    * Allows interaction with a deployed model to verify individual model performance before integrating it into a flow.
+    * Ideal for quickly entering a prompt, seeing the response, and iteratively tweaking the prompt or system message to improve performance.
+
+    * Note - You can test a model you deployed in the Azure AI Foundry portal by interacting with it in the chat playground.
+
+3.  **Evaluate Multiple Prompts with Manual Evaluations Feature:**
+    * Use this feature to manually evaluate a larger, diverse test dataset more quickly.
+    * Upload a dataset containing multiple questions (and optionally an expected response).
+    * Rate the model's responses using a "thumbs up" or "thumbs down" feature.
+    * Improve the model based on the overall rating by changing the input prompt, system message, model, or model parameters.
+
+*After manually evaluating an individual model, it can be integrated into a chat application using prompt flow, which can also be evaluated manually or automatically.*
+
+## Automated evaluations
+
+Automated evaluations in the Azure AI Foundry portal are used to assess the quality and content safety performance of models, datasets, or prompt flows.
+
+#### **Evaluation Data**
+
+* A model or flow requires a dataset of **prompts and responses** (optionally including **"ground truth,"** the expected responses) for evaluation.
+* The dataset can be:
+    * Compiled manually.
+    * Generated from the output of an existing application.
+    * **Generated by an AI model** for a specific subject (then edited to reflect the desired output/ground truth).
+
+#### **Evaluation Metrics**
+
+Automated evaluation allows selecting **evaluators** to measure specific metrics:
+
+1.  **AI Quality:**
+    * Uses **AI models** to evaluate responses for metrics such as **coherence** and **relevance**.
+    * Uses **standard NLP metrics** based on ground truth (expected response text), including:
+        * **F1 score**
+        * **BLEU**
+        * **METEOR**
+        * **ROUGE**
+
+2.  **Risk and Safety:**
+    * Evaluators assess responses for **content safety issues** (e.g., violence, hate, sexual content, self-harm).
+
+
+## Exercise - Evaluate generative AI model performance
+
+- If you have an Azure subscription, you can use Azure AI Foundry portal to evaluate the performance of a generative AI app.
+
+https://learn.microsoft.com/en-us/training/modules/evaluate-models-azure-ai-studio/5-exercise
+
+
+# 
